tests/functional/lang/eval-fail/toJSON-stack-overflow.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail/toJSON-stack-overflow.nix:8:1:
            7| in
            8| builtins.toJSON reverseLinkedList
             | ^
            9|

       … while evaluating attribute 'tail'
         at /pwd/lang/eval-fail/toJSON-stack-overflow.nix:6:67:
            5|   long = builtins.genList (x: x) 100000;
            6|   reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                                   ^
            7| in

       (9997 duplicate frames omitted)

       … while evaluating attribute 'head'
         at /pwd/lang/eval-fail/toJSON-stack-overflow.nix:6:62:
            5|   long = builtins.genList (x: x) 100000;
            6|   reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                              ^
            7| in

       error: stack overflow; max-call-depth exceeded
       at /pwd/lang/eval-fail/toJSON-stack-overflow.nix:6:62:
            5|   long = builtins.genList (x: x) 100000;
            6|   reverseLinkedList = builtins.foldl' (tail: head: { inherit head tail; }) null long;
             |                                                              ^
            7| in
